; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_mpc8.c_mpc8_get_chunk_header.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_mpc8.c_mpc8_get_chunk_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i64*)* @mpc8_get_chunk_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mpc8_get_chunk_header(i32* %0, i32* %1, i64* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i64* %2, i64** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i64 @avio_tell(i32* %8)
  store i64 %9, i64* %7, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @avio_rl16(i32* %10)
  %12 = load i32*, i32** %5, align 8
  store i32 %11, i32* %12, align 4
  %13 = load i32*, i32** %4, align 8
  %14 = call i64 @ffio_read_varlen(i32* %13)
  %15 = load i64*, i64** %6, align 8
  store i64 %14, i64* %15, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = call i64 @avio_tell(i32* %16)
  %18 = load i64, i64* %7, align 8
  %19 = sub nsw i64 %17, %18
  %20 = load i64*, i64** %6, align 8
  %21 = load i64, i64* %20, align 8
  %22 = sub nsw i64 %21, %19
  store i64 %22, i64* %20, align 8
  ret void
}

declare dso_local i64 @avio_tell(i32*) #1

declare dso_local i32 @avio_rl16(i32*) #1

declare dso_local i64 @ffio_read_varlen(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
